extract pulsar simulator const